css/main_2.css
html {
    box-sizing: border-box;
  }

  *,
  *:before,
  *:after {
    box-sizing: inherit;
  }
body{
    font-family: 'Noto Sans JP', sans-serif;
    color: rgb(103, 103, 103);
}

h1{
    font-family: 'Lora', serif;
    color: rgb(51, 51, 51);
    padding: .5rem;
}
h2{
    margin: 2rem;
    color: rgb(51, 51, 51);
    
}
.img{
    display: block;
}
.container{
    background: rgb(248, 246, 245);
    max-width: 100%;
    padding: 2rem;
}

ul{
    list-style-type: none;
    justify-items: center;
    margin: 1rem;
}

/** page-header **/

.logo-1{
    float: left;
    margin-right: 4rem; 
}
.page-header{
    display: flex;
    justify-content: space-between;
    background-color:rgb(248, 246, 245);
}
.page-header_nav{
    display: flex;
    align-items: center;
    text-transform: uppercase;
    font-family: 'Lora', serif;
}
.page-header_logo-group{
    display: flex;

}
.page-header_site-name{
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 1.2rem;
    font-weight: 200;
    text-transform: uppercase;
    margin:0;
    display: flex;
    align-items: center;
}
.page-header_site-name i {
    text-transform: none;
    font-size: 1rem;
    margin: 0.5rem;

}
.logo-icon{
    width: 2rem;

/** components **/    
}
.component-card{
    margin: 2rem;
    background: lightgrey;
    padding: 4rem;
}

/** projects **/
.card{
    margin: 8rem;
    margin-bottom: 2rem;
    padding: 2rem;
    display: block;
    text-align: center;
    justify-content: center;

}
.card-projects{
    display:grid;
    grid-template-columns: 500px 500px 500px;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto;
    justify-content: center;
}


/** buttons **/

button{
    font-family: 'Lora', serif;
    font-size: 18px;
    color: rgb(82, 81, 81);
    border: 0;
    text-align: center;
    background: rgb(207, 205, 205);
    padding: 1.5rem;
    margin: 1rem auto
}
.button-wide{
display: block;
max-width: 66%;
margin: 1rem auto;
background: rgb(170, 169, 169);
}

/** page-footer **/
.page-footer{
    background-color: rgb(61, 60, 60);
    padding: 2rem;
}
.page-footer_container{
    max-width: 36rem;
    margin: auto;
    text-align: center;
}
.page-footer-nav{
    max-width: 36rem;
    margin: auto;
}
.page-footer-nav_list{
    display: flex;
    justify-content:space-between;
    font-size: 0.8rem;
    text-transform: uppercase;
    font-family: 'Lora', serif;
    color: rgb(207, 205, 205);
}
.page-footer-contact{
    font-family: 'Lora', serif;
    color: rgb(207, 205, 205);
    padding: 2rem;
}
.page-footer-contact_email{
    font-family: 'Noto Sans JP', sans-serif;
    font-size:0.8rem ;
    color: rgb(207, 205, 205);
    padding: 0.5rem;
}

